--- a/RideShare/app/src/main/res/layout/activity_main.xml
+++ b/RideShare/app/src/main/res/layout/activity_main.xml
@@ -3,13 +3,47 @@
     android:layout_height="fill_parent" >
 
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textView1"
+        android:layout_below="@+id/textView"
+        android:layout_marginTop="50dp"/>
 
     <fragment
         android:id="@+id/mapView"
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_below="@+id/textView1"
+        android:layout_marginTop="30dp"/>
 
+    <Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Source"
+    android:id="@+id/button"
+    android:layout_alignParentRight="true"
+    android:layout_toRightOf="@+id/textView"
+    android:layout_marginLeft="50dp"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Destination"
+        android:id="@+id/button1"
+        android:layout_toRightOf="@+id/textView1"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/button"
+        android:layout_alignParentRight="true"/>
 
 </RelativeLayout>
