--- a/RideShare/app/src/main/res/layout/activity_main.xml
+++ b/RideShare/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,10 @@
         android:id="@+id/textView"
         android:layout_alignParentTop="true" />
 
-    <TextView
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
+        android:hint="New Text...."
         android:id="@+id/textView1"
         android:layout_below="@+id/textView"
         android:layout_marginTop="50dp"/>
