--- a/RideShare/app/src/main/res/layout/activity_main.xml
+++ b/RideShare/app/src/main/res/layout/activity_main.xml
@@ -46,4 +46,12 @@
         android:layout_below="@+id/button"
         android:layout_alignParentRight="true"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get Path"
+        android:id="@+id/button2"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
