Search Route done... displayed to map

--- a/RideShare/app/src/main/res/layout/activity_main.xml
+++ b/RideShare/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/textView"
-        android:layout_alignParentTop="true" />
+
+        android:layout_marginTop="10dp"/>
 
     <fragment
         android:id="@+id/mapView"
@@ -25,15 +26,16 @@
     android:id="@+id/button"
     android:layout_alignParentRight="true"
     android:layout_toRightOf="@+id/textView"
-    android:layout_marginLeft="50dp"/>
+    android:layout_marginLeft="50dp"
+    android:layout_marginTop="10dp"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Destination"
+        android:text="Destn"
         android:id="@+id/button1"
         android:layout_toRightOf="@+id/textView1"
-        android:layout_marginLeft="50dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
         android:layout_below="@+id/button"
         android:layout_alignParentRight="true"/>
@@ -49,7 +51,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create Route"
+        android:text="Create"
         android:id="@+id/button3"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"/>
@@ -57,7 +59,7 @@
 
     <com.example.general.rideshare.CustomAutoCompleteTextView
         android:id="@+id/textView1"
-        android:layout_width="150dp"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:singleLine="false"
         android:hint="Enter place here"
@@ -71,6 +73,7 @@
         android:id="@+id/button4"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
 
 
 </RelativeLayout>
