--- a/RideShare/app/src/main/res/layout/activity_show_current_loc.xml
+++ b/RideShare/app/src/main/res/layout/activity_show_current_loc.xml
@@ -4,13 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.general.rideshare.SearchRoute">
-
-    <TextView android:text=""
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"/>
-
+    tools:context="com.example.general.rideshare.ShowCurrentLoc">
 
     <fragment
         android:id="@+id/mapView"
@@ -19,14 +13,5 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="20dp"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Select Ride"
-        android:id="@+id/button5"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-
 
 </RelativeLayout>
