--- a/RideShare/app/src/main/res/layout/activity_search_route.xml
+++ b/RideShare/app/src/main/res/layout/activity_search_route.xml
@@ -1,18 +1,25 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.general.rideshare.SearchRoute">
-
-    <TextView android:text=""
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"/>
+    android:id="@+id/rlay"
+    tools:context="com.example.general.rideshare.SearchRoute"
+    android:orientation="vertical">
 
 
-    <fragment
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="0.2"
+        android:orientation="vertical">
+        <TextView android:text=""
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView"/>
+
+        <fragment
         android:id="@+id/mapView"
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
@@ -20,13 +27,25 @@
         android:layout_below="@+id/textView1"
         android:layout_marginTop="20dp"/>
 
-    <Button
+   </LinearLayout>
+
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select Ride"
+            android:id="@+id/button5"
+            android:layout_centerHorizontal="true" />
+    <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select Ride"
-        android:id="@+id/button5"
-        android:layout_alignParentBottom="true"
+        android:id="@+id/scrollView2"
         android:layout_centerHorizontal="true" />
 
+    </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
